--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -16,6 +16,7 @@
 	<!-- These languages must be in the same order as the language codes below -->
 	<string-array name="prefs_interface_locale_descriptions">
 		<item>@string/lang_default</item>
+		<item>@string/lang_afrikaans</item>
 		<item>@string/lang_czech</item>
 		<item>@string/lang_welsh</item>
 		<item>@string/lang_german</item>
@@ -44,6 +45,7 @@
 	<!--  DO NOT TRANSLATE the following language codes -->
 	<string-array name="prefs_interface_locale_values">
 		<item></item>
+		<item>af</item>
 		<item>cs</item>
 		<item>cy</item>
 		<item>de</item>
