--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -9,6 +9,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 -->
 <resources>
     <!-- Languages -->
+	<string name="lang_afrikaans">af: Afrikaans</string>
 	<string name="lang_czech">cs: Čeština</string>
 	<string name="lang_welsh">cy: Cymraeg</string>
 	<string name="lang_german">de: Deutsch</string>
