--- a/AndBible/res/menu/document_viewer_context_menu.xml
+++ b/AndBible/res/menu/document_viewer_context_menu.xml
@@ -11,8 +11,8 @@
 		  android:title="@string/notes"/>
 	<item android:id="@+id/add_bookmark"
 		  android:title="@string/add_bookmark"/>
-	<item android:id="@+id/add_usernote" 
-		  android:title="@string/add_usernote"/>
+	<item android:id="@+id/addUsernote" 
+		  android:title="@string/usernote_add"/>
 	<item android:id="@+id/copy" 
 		  android:title="@string/copy"/>
 	<item android:id="@+id/shareVerse" 
