Integrate MyNoteEditText into MainBibleView directly

--- a/AndBible/res/layout/main_bible_view.xml
+++ b/AndBible/res/layout/main_bible_view.xml
@@ -13,10 +13,10 @@
     android:fadingEdgeLength="0sp"
     >
 	<include layout="@layout/title_bar"/>
-	
-	<net.bible.android.view.activity.page.BibleView  
+		
+	<!-- net.bible.android.view.activity.page.BibleView  
 		android:id="@+id/main_text" 
 	    android:layout_width="fill_parent" 
 	    android:layout_height="fill_parent"
-	/>
+	/-->
 </LinearLayout>
