Fix Android 4.0 JSword bug; Add underscore css; update sdk

--- a/AndBible/assets/style.css
+++ b/AndBible/assets/style.css
@@ -80,6 +80,9 @@ h1 {
 .hi_sup {
 	vertical-align: super;
 }
+.hi_underline {
+	text-decoration: underline;
+}
 
 .rtl-notusedyet {
 	direction: rtl;
