--- a/AndBible/res/layout/notes.xml
+++ b/AndBible/res/layout/notes.xml
@@ -10,22 +10,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-	<TextView android:id="@+id/title" 
-		android:layout_height="wrap_content" 
-		android:layout_width="fill_parent" 
-		android:layout_alignParentTop="true"
-		android:textSize="16sp"/>
-	<ListView android:id="@android:id/list"
-		android:layout_height="fill_parent" 
-		android:layout_width="fill_parent"
-		android:layout_below="@+id/title"
-		android:layout_above="@+id/button_panel"/>
-		
 	<TextView android:id="@+id/warningText"
 		android:visibility="gone" 
 		android:layout_height="wrap_content" 
 		android:layout_width="wrap_content" 
-		android:layout_below="@+id/title"/>
+		android:layout_alignParentTop="true"/>
+	<ListView android:id="@android:id/list"
+		android:layout_height="fill_parent" 
+		android:layout_width="fill_parent"
+		android:layout_above="@+id/button_panel"/>
 		
 	<!-- Button bar with Next/Prev buttons -->
 	<LinearLayout android:id="@+id/button_panel"
