--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -24,9 +24,10 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_lithuanian">lt: Lietuvių</string>
 	<string name="lang_latvian">lv: Latviešu</string>
 	<string name="lang_malagasy">mg: Malagasy</string>
-	<string name="lang_norwegian">nb: Norsk bokmål</string>
-	<string name="lang_dutch">nl: Nederlands</string>
-	<string name="lang_polish">pl: Polski</string>
+	<string name="lang_norwegian_bokmal">nb: Norsk bokmål</string>
+   	<string name="lang_dutch">nl: Nederlands</string>
+	<string name="lang_norwegian_nynorsk">nn: Norsk nynorsk</string>
+    <string name="lang_polish">pl: Polski</string>
 	<string name="lang_portuguese">pt: Português</string>
 	<string name="lang_russian">ru: Русский</string>
 	<string name="lang_swedish">sv: Svenska</string>
