--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -48,6 +48,10 @@
 				android:summary="@string/prefs_text_size_summary"
 				android:defaultValue="16"
 				android:max="34"/> 
+	<CheckBoxPreference android:key="tilt_to_scroll_pref"
+				android:title="@string/prefs_tilt_to_scroll_title"
+				android:summary="@string/prefs_tilt_to_scroll_summary"
+				android:defaultValue="true"/>
 	<CheckBoxPreference android:key="navigate_to_verse_pref" 
 				android:title="@string/prefs_navigate_to_verse_title"
 				android:summary="@string/prefs_navigate_to_verse_summary"
