--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -19,7 +19,11 @@
 				android:title="@string/prefs_verse_per_line_title" 
 				android:summary="@string/prefs_verse_per_line_summary" 
 				android:defaultValue="false"/>
-	<CheckBoxPreference android:key="show_mynotes_pref" 
+	<CheckBoxPreference android:key="show_bookmarks_pref" 
+				android:title="@string/prefs_show_bookmarks_title"
+				android:summary="@string/prefs_show_bookmarks_summary"
+				android:defaultValue="true"/>
+   	<CheckBoxPreference android:key="show_mynotes_pref" 
 				android:title="@string/prefs_show_mynotes_title"
 				android:summary="@string/prefs_show_mynotes_summary"
 				android:defaultValue="true"/>
