Show 'No items to display' if list has no content

--- a/AndBible/res/layout/list.xml
+++ b/AndBible/res/layout/list.xml
@@ -15,4 +15,9 @@
 	<ListView android:id="@android:id/list"
 		android:layout_height="fill_parent" 
 		android:layout_width="fill_parent"/>
+	<TextView android:id="@android:id/empty"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:textStyle="bold"
+		android:text="@string/empty_list"/>
 </LinearLayout>
