--- a/AndBible/res/layout/bookmarks.xml
+++ b/AndBible/res/layout/bookmarks.xml
@@ -20,4 +20,9 @@
 		android:choiceMode="singleChoice"
 		android:visibility="visible"
 		/>
+	<TextView android:id="@android:id/empty"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:textStyle="bold"
+		android:text="@string/empty_list"/>
 </LinearLayout>
