--- a/AndBible/res/layout/reading_plan_one_day.xml
+++ b/AndBible/res/layout/reading_plan_one_day.xml
@@ -25,11 +25,23 @@
 			android:layout_height="wrap_content" 
 			android:layout_width="wrap_content"/>
 	   	
-	   	<TextView android:id="@+id/day"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:layout_height="wrap_content" 
-			android:layout_width="wrap_content"/>
-	
+	    <LinearLayout android:id="@+id/dates"
+	        android:orientation="horizontal"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content">
+
+	        <TextView android:id="@+id/date"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content"/>
+	        <TextView android:id="@+id/day"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:layout_height="wrap_content" 
+				android:layout_width="fill_parent"
+				android:gravity="right"/>
+	        
+	  	</LinearLayout>
+	        	
 	   	<TextView android:id="@+id/status_message"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:layout_height="wrap_content" 
