--- a/AndBible/res/menu/download_documents.xml
+++ b/AndBible/res/menu/download_documents.xml
@@ -7,6 +7,6 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/refresh" 
-		  android:title="@string/refresh"
+		  android:title="@string/download_refresh_book_list_menu_item"
 		  android:icon="@drawable/ic_menu_refresh"/>
 </menu>
