--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -12,6 +12,18 @@
 		<item>@string/doc_type_dictionary</item>
 		<item>@string/doc_type_book</item>
 	</string-array>
+
+	<!-- These languages must be in the same order as the language codes below -->
+	<string-array name="prefs_night_mode_descriptions">
+		<item>@string/no</item>
+		<item>@string/yes</item>
+		<item>@string/prefs_night_mode_automatic</item>
+	</string-array>
+	<string-array name="prefs_night_mode_values">
+		<item>false</item>
+		<item>true</item>
+		<item>automatic</item>
+	</string-array>
 	
 	<!-- These languages must be in the same order as the language codes below -->
 	<string-array name="prefs_interface_locale_descriptions">
