--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -7,10 +7,12 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
 			android:key="bible_display_pref">
-	<CheckBoxPreference android:key="night_mode_pref" 
+	<ListPreference android:key="night_mode_pref2" 
 				android:title="@string/prefs_night_mode_title"
 				android:summary="@string/prefs_night_mode_summary"
-				android:defaultValue="false"/> 
+				android:entries="@array/prefs_night_mode_descriptions"
+				android:entryValues="@array/prefs_night_mode_values"
+				android:defaultValue="false"/>
 	<CheckBoxPreference android:key="show_verseno_pref" 
 				android:title="@string/prefs_show_verseno_title"
 				android:summary="@string/prefs_show_verseno_summary"
