--- a/AndBible/res/layout/reading_plan_one_day.xml
+++ b/AndBible/res/layout/reading_plan_one_day.xml
@@ -53,7 +53,9 @@
 	    android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:layout_margin="10dip"
-		android:layout_below="@id/top_text">
+		android:layout_below="@id/top_text"
+		android:shrinkColumns="1"
+		android:stretchColumns="1,2,3">
 
     </TableLayout>
     
