--- a/AndBible/res/layout/reading_plan_one_reading.xml
+++ b/AndBible/res/layout/reading_plan_one_reading.xml
@@ -9,42 +9,19 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
-  	<ImageView android:id="@+id/tick_off" 
+  	<ImageView android:id="@+id/tick" 
   	    android:src="@drawable/btn_check_buttonless_off"
-  	    android:contentDescription="Not ticked"
-  	    android:layout_marginRight="5dip"
-  	    android:visibility="visible"/>
-  	<ImageView android:id="@+id/tick_on" 
-  	    android:src="@drawable/btn_check_buttonless_on"
-  	    android:layout_marginRight="5dip"
-  	    android:contentDescription="Ticked"
-  	    android:visibility="gone"/>
+  	    android:contentDescription="Tick"
+  	    android:layout_marginRight="5dip"/>
   	
   	<TextView android:id="@+id/passage"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:layout_height="wrap_content" 
-        android:layout_weight="2"
-		android:layout_gravity="center_vertical"/>
+		android:textAppearance="?android:attr/textAppearanceMedium"/>
     
   	<Button android:id="@+id/readButton"
- 		android:text="@string/selectPassage"
-        android:layout_weight="3"
-        android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:lines="1"
-		android:minWidth="100dip"
-		android:paddingLeft="1dip"		
-		android:paddingRight="1dip"/>
+ 		android:text="@string/selectPassage"/>
   	
   	<Button android:id="@+id/speakButton"
- 		android:text="@string/speak"
-        android:layout_weight="3"
-        android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:lines="1"
-		android:minWidth="100dip"
-		android:paddingLeft="1dip"		
-		android:paddingRight="1dip"/>
+ 		android:text="@string/speak"/>
   			
 </TableRow>
 
