--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -57,7 +57,7 @@
 	<CheckBoxPreference android:key="tilt_to_scroll_pref"
 				android:title="@string/prefs_tilt_to_scroll_title"
 				android:summary="@string/prefs_tilt_to_scroll_summary"
-				android:defaultValue="true"/>
+				android:defaultValue="false"/>
 	<CheckBoxPreference android:key="navigate_to_verse_pref" 
 				android:title="@string/prefs_navigate_to_verse_title"
 				android:summary="@string/prefs_navigate_to_verse_summary"
