increase poetry indent if wider screen

--- a/AndBible/res/values-land/dimens.xml
+++ b/AndBible/res/values-land/dimens.xml
@@ -27,4 +27,7 @@
 	<!--  number of buttons varies depending on screen size and orientation -->
 	<integer name="number_of_quick_buttons">4</integer>
 	
+	<!-- width of one poetry line indent -->
+	<integer name="poetry_indent_chars">4</integer>
+	
 </resources>
