--- a/AndBible/res/values-large/dimens.xml
+++ b/AndBible/res/values-large/dimens.xml
@@ -3,4 +3,6 @@
 
 	<integer name="grid_cell_text_size_sp">21</integer>
 	
+	<!-- width of one poetry line indent -->
+	<integer name="poetry_indent_chars">4</integer>
 </resources>
