--- a/AndBible/res/layout/notes.xml
+++ b/AndBible/res/layout/notes.xml
@@ -5,7 +5,7 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -14,34 +14,9 @@
 		android:visibility="gone" 
 		android:layout_height="wrap_content" 
 		android:layout_width="wrap_content" 
-		android:layout_alignParentTop="true"/>
+		/>
 	<ListView android:id="@android:id/list"
 		android:layout_height="fill_parent" 
 		android:layout_width="fill_parent"
-		android:layout_above="@+id/button_panel"/>
-		
-	<!-- Button bar with Next/Prev buttons -->
-	<LinearLayout android:id="@+id/button_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        style="@android:style/ButtonBar"
-	    android:layout_alignParentBottom="true">
-
-	  	<Button android:id="@+id/prevButton"
-	 		android:text="@string/previous"
-			android:onClick="onPrevious"
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"/>
-
-	  	<Button android:id="@+id/nextButton"
-	 		android:text="@string/next"
-			android:onClick="onNext"
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"/>
-
-	</LinearLayout>
-		
-</RelativeLayout>
+		/>
+</LinearLayout>
