Add Indonesian to list and use locale used by Java (in not id)

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -40,6 +40,7 @@
 		<item>@string/lang_hebrew</item>
 		<item>@string/lang_croatian</item>
 		<item>@string/lang_hungarian</item>
+		<item>@string/lang_indonesian</item>
 		<item>@string/lang_korean</item>
 		<item>@string/lang_lithuanian</item>
 		<item>@string/lang_latvian</item>
@@ -71,6 +72,7 @@
 		<item>he</item>
 		<item>hr</item>
 		<item>hu</item>
+		<item>in</item>
 		<item>ko</item>
 		<item>lt</item>
 		<item>lv</item>
