--- a/AndBible/res/values/dimens.xml
+++ b/AndBible/res/values/dimens.xml
@@ -20,7 +20,8 @@
 
 <resources>
 	<dimen name="title_bar_title_width">130dip</dimen>
-
+	<dimen name="title_bar_height">28dip</dimen>
+	
 	<!-- number of breaks at bottom to allow selection of last verse -->
 	<integer name="br_count_at_bottom">14</integer>
 	
