--- a/AndBible/res/layout/title_bar.xml
+++ b/AndBible/res/layout/title_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
 	android:id="@+id/titleBar"
     android:layout_width="fill_parent" 
-    android:layout_height="28dip"
+    android:layout_height="@dimen/title_bar_height"
     android:background="#FF848284"
     >
 
@@ -14,12 +14,10 @@
 	    android:layout_toLeftOf="@+id/rightTitlePanel"
 	>
 	    <Button android:id="@+id/titleDocument"
-		        android:layout_width="wrap_content"
 				style="@style/TitleBarTitleButton"
 				android:text="@string/app_name"
 	    />
 	    <Button android:id="@+id/titlePassage"
-		        android:layout_width="wrap_content"
 				style="@style/TitleBarTitleButton"
 	    />
 		<ProgressBar android:id="@+id/progressCircular"
