--- a/AndBible/res/values-xlarge-land/dimens.xml
+++ b/AndBible/res/values-xlarge-land/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_of_quick_buttons">90dip</dimen>
+    
 	<!-- number of breaks at bottom to allow selection of last verse -->
 	<integer name="br_count_at_bottom">24</integer>
 
-	<!--  number of buttons varies depending on screen size and orientation -->
-	<integer name="number_of_quick_buttons">6</integer>
 </resources>
