--- a/AndBible/res/values-xlarge/dimens.xml
+++ b/AndBible/res/values-xlarge/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!-- number of breaks at bottom to allow selection of last verse -->
+	<dimen name="title_bar_height">36dip</dimen>
+	
+    <!-- number of breaks at bottom to allow selection of last verse -->
 	<integer name="br_count_at_bottom">30</integer>
 	
 	<!--  number of buttons varies depending on screen size and orientation -->
