--- a/AndBible/assets/web/style.css
+++ b/AndBible/assets/web/style.css
@@ -2,7 +2,7 @@
 */
 
 body {
-	line-height: 1.6em; /* repeat this in .verse */
+	line-height: 1.6em; /* repeat this in .verse ; also hard-coded in BibleView*/
 	font-size: 1.1em;
 }
 
