--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -30,6 +30,7 @@
 	<string-array name="prefs_interface_locale_descriptions">
 		<item>@string/lang_default</item>
 		<item>@string/lang_afrikaans</item>
+		<item>@string/lang_arabic</item>
 		<item>@string/lang_czech</item>
 		<item>@string/lang_welsh</item>
 		<item>@string/lang_german</item>
@@ -63,6 +64,7 @@
 	<string-array name="prefs_interface_locale_values">
 		<item></item>
 		<item>af</item>
+		<item>ar</item>
 		<item>cs</item>
 		<item>cy</item>
 		<item>de</item>
