--- a/AndBible/res/menu/reading_plan.xml
+++ b/AndBible/res/menu/reading_plan.xml
@@ -6,7 +6,10 @@
       The copyright to this program is held by it's author.
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/setStartToJan1" 
+	<item android:id="@+id/done" 
+		  android:title="@string/done"
+		  android:icon="@drawable/btn_check_buttonless_on"/>
+    <item android:id="@+id/setStartToJan1" 
 		  android:title="@string/rdg_plan_set_start_jan1"
 		  android:icon="@android:drawable/ic_menu_day"/>
 	<item android:id="@+id/reset" 
