--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -23,6 +23,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_croatian">hr: Hrvatski‬</string>
 	<string name="lang_hungarian">hu: Magyar</string>
 	<string name="lang_indonesian">in: Bahasa Indonesia</string>
+	<string name="lang_italian">it: Italiano</string>
 	<string name="lang_korean">ko: 한국어</string>
 	<string name="lang_lithuanian">lt: Lietuvių</string>
 	<string name="lang_latvian">lv: Latviešu</string>
