rew/ff/stop and tts fixes

--- a/AndBible/res/layout/title_bar.xml
+++ b/AndBible/res/layout/title_bar.xml
@@ -38,7 +38,7 @@
 	>
 	    <ImageButton android:id="@+id/quickSpeakRew"
 	        	android:src="@android:drawable/ic_media_rew"
-	        	android:contentDescription="@string/speak"
+	        	android:contentDescription="@string/rewind"
 	        	android:visibility="gone"
 				style="@style/SmallTitleBarButton"
 	    />
@@ -48,9 +48,15 @@
 	        	android:visibility="gone"
 				style="@style/SmallTitleBarButton"
 	    />
+	    <ImageButton android:id="@+id/quickSpeakStop"
+	        	android:src="@drawable/ic_media_stop"
+	        	android:contentDescription="@string/stop"
+	        	android:visibility="gone"
+				style="@style/SmallTitleBarButton"
+	    />
 	    <ImageButton android:id="@+id/quickSpeakFF"
 	        	android:src="@android:drawable/ic_media_ff"
-	        	android:contentDescription="@string/speak"
+	        	android:contentDescription="@string/forward"
 	        	android:visibility="gone"
 				style="@style/SmallTitleBarButton"
 	    />
