add Hindi Bible book names

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -40,6 +40,7 @@
 		<item>@string/lang_faroese</item>
 		<item>@string/lang_french</item>
 		<item>@string/lang_hebrew</item>
+		<item>@string/lang_hindi</item>
 		<item>@string/lang_croatian</item>
 		<item>@string/lang_hungarian</item>
 		<item>@string/lang_indonesian</item>
@@ -76,6 +77,7 @@
 		<item>fo</item>
 		<item>fr</item>
 		<item>he</item>
+		<item>hi</item>
 		<item>hr</item>
 		<item>hu</item>
 		<item>in</item>
