--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -20,6 +20,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_faroese">fo: Føroyskt</string>
 	<string name="lang_french">fr: Français</string>
 	<string name="lang_hebrew">he: ‫עברית‬</string>
+	<string name="lang_hindi">hi: हिन्दी‬</string>
 	<string name="lang_croatian">hr: Hrvatski‬</string>
 	<string name="lang_hungarian">hu: Magyar</string>
 	<string name="lang_indonesian">in: Bahasa Indonesia</string>
