Add Japanese, temporarily remove Malayalam

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -45,6 +45,7 @@
 		<item>@string/lang_hungarian</item>
 		<item>@string/lang_indonesian</item>
 		<item>@string/lang_italian</item>
+		<item>@string/lang_japanese</item>
 		<item>@string/lang_korean</item>
 		<item>@string/lang_lithuanian</item>
 		<item>@string/lang_latvian</item>
@@ -82,6 +83,7 @@
 		<item>hu</item>
 		<item>in</item>
 		<item>it</item>
+		<item>ja</item>
 		<item>ko</item>
 		<item>lt</item>
 		<item>lv</item>
