--- a/AndBible/res/layout/speak.xml
+++ b/AndBible/res/layout/speak.xml
@@ -63,20 +63,46 @@
         style="@android:style/ButtonBar"
 	    android:layout_alignParentBottom="true">
 
-	  	<Button android:id="@+id/speakButton"
-	 		android:text="@string/speak"
-			android:onClick="onSpeak"
+	  	<ImageButton android:id="@+id/rewindButton"
+        	android:src="@android:drawable/ic_media_rew"
+        	android:contentDescription="@string/rewind"
 	        android:layout_width="0dip"
 	        android:layout_height="wrap_content"
-	        android:layout_weight="1"/>
-
-	  	<Button android:id="@+id/stopButton"
-	 		android:text="@string/stop"
+	        android:layout_weight="1"
+			android:onClick="onRewind"/>
+	  	
+	    <ImageButton android:id="@+id/stopButton"
+	  	    android:src="@drawable/ic_media_stop"
+	        android:contentDescription="@string/stop"
 	        android:layout_width="0dip"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 			android:onClick="onStop"/>
+	  	
+	    <ImageButton android:id="@+id/pauseButton"
+	  	    android:src="@android:drawable/ic_media_pause"
+	        android:contentDescription="@string/pause"
+	        android:layout_width="0dip"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+			android:onClick="onPause"/>
+	    
+	    <ImageButton android:id="@+id/speakButton"
+	  	    android:src="@android:drawable/ic_media_play"
+	        android:contentDescription="@string/speak"
+	        android:layout_width="0dip"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+   			android:onClick="onSpeak"/>
 
+	    <ImageButton android:id="@+id/forwardButton"
+	  	    android:src="@android:drawable/ic_media_ff"
+	        android:contentDescription="@string/forward"
+	        android:layout_width="0dip"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+   			android:onClick="onForward"/>
+	    	    
 	</LinearLayout>
 
 </RelativeLayout>
