Keep the screen always on (prevent it from going to sleep). (Fixes #46)

--- a/AndBible/res/layout/main_bible_view.xml
+++ b/AndBible/res/layout/main_bible_view.xml
@@ -11,6 +11,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:fadingEdgeLength="0sp"
+    android:keepScreenOn = "true"
     >
 	<include layout="@layout/title_bar"/>
 		
