--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -43,7 +43,9 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_ukrainian">uk: Українська</string>
 	<string name="lang_vietnamese">vi: Tiếng Việt</string>
 	<string name="lang_chinese">zh: 古文</string>
-	    	
+	<string name="lang_chinese_simplified">zh-CN: 古文 (简体)</string>
+	<string name="lang_chinese_traditional">zh-TW: 古文 (繁體)</string>
+		    	
     <!-- Speak -->
     <plurals name="num_chapters">
         <item quantity="one">@string/one_chapter</item>
