--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -69,6 +69,10 @@
 				android:title="@string/prefs_navigate_to_verse_title"
 				android:summary="@string/prefs_navigate_to_verse_summary"
 				android:defaultValue="false"/>
+	<ListPreference android:key="screen_timeout_pref" 
+				android:title="@string/prefs_screen_timeout_title"
+				android:summary="@string/prefs_screen_timeout_summary"
+				android:defaultValue=""/>
 	<ListPreference android:key="locale_pref" 
 				android:title="@string/prefs_interface_locale_title"
 				android:summary="@string/prefs_interface_locale_summary"
