Add Spanish (partial)

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -35,6 +35,7 @@
 		<item>@string/lang_welsh</item>
 		<item>@string/lang_german</item>
 		<item>@string/lang_english</item>
+		<item>@string/lang_spanish</item>
 		<item>@string/lang_estonian</item>
 		<item>@string/lang_finnish</item>
 		<item>@string/lang_faroese</item>
@@ -74,6 +75,7 @@
 		<item>cy</item>
 		<item>de</item>
 		<item>en</item>
+		<item>es</item>
 		<item>et</item>
 		<item>fi</item>
 		<item>fo</item>
