scrollto required verse when synching split screen

--- a/AndBible/res/layout/title_bar.xml
+++ b/AndBible/res/layout/title_bar.xml
@@ -69,7 +69,7 @@
 					style="@style/TitleBarToggleButton"
 		/>
    	    <Button android:id="@+id/quickSplitScreen"
-		        android:visibility="invisible"
+		        android:visibility="gone"
 				style="@style/TitleBarButton"
 				android:text="¦"
 	    />
