--- a/AndBible/res/values/dimens.xml
+++ b/AndBible/res/values/dimens.xml
@@ -30,4 +30,7 @@
 	<integer name="grid_cell_text_size_sp">15</integer>
 	
 	<integer name="poetry_indent_chars">2</integer>
+	
+	<dimen name="split_screen_separator_width">4dip</dimen>
+	
 </resources>
