--- a/AndBible/res/values/dimens.xml
+++ b/AndBible/res/values/dimens.xml
@@ -32,5 +32,6 @@
 	<integer name="poetry_indent_chars">2</integer>
 	
 	<dimen name="split_screen_separator_width">4dip</dimen>
-	
+	<dimen name="minimise_restore_button_size">35dip</dimen>
+		
 </resources>
