--- a/AndBible/res/values-land/dimens.xml
+++ b/AndBible/res/values-land/dimens.xml
@@ -19,7 +19,7 @@
 -->
 
 <resources>
-	<dimen name="title_bar_title_width">280dip</dimen>
+	<!-- dimen name="title_bar_title_width">280dip</dimen -->
 
 	<!--  number of buttons varies depending on screen size and orientation -->
 	<integer name="number_of_quick_buttons">8</integer>
