Make Textsize dialog text show on all vers of Android

--- a/AndBible/res/values/styles.xml
+++ b/AndBible/res/values/styles.xml
@@ -72,4 +72,9 @@
         <item name="android:textSize">12sp</item>
         <item name="android:typeface">sans</item>
     </style>
+    
+    <style name="SmallGreyText" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">#C0C0C0</item>
+    </style>
+    
 </resources>
